<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleMap</string>
    <string name="tittle">Shopping Complex</string>
    <string name="name">Name</string>
    <string name="addr">Address</string>
    <string name="desc">Description</string>
    <string name="lat">Latitude</string>
    <string name="lngt">Longitude</string>
    <string name="clsd">Closed Day</string>
    <string name="open">Open Time</string>
    <string name="add">Save Info</string>
    <string name="openTime">Open Time</string>
    <string name="sat">Satellite</string>
    <string name="normal">Normal Map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="option">Select Option</string>
    <string name="deleteChart">Delete Info</string>
    <string name="create">Create List</string>

</resources>
